--- a/src/main/resources/templates/update-product.html
+++ b/src/main/resources/templates/update-product.html
@@ -5,6 +5,9 @@
     <title>Update product</title>
 </head>
 <body>
+
+<!--<p th:if="${errorMessage != null}" th:text="${errorMessage}"></p>-->
+
 <form th:action="@{/product/update}" th:object="${product}" method="post">
   <input type="hidden" th:field="*{id}" />
   <label for="name">Име:</label>
